--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\CIAutomation2019\swabLabs\src\test\resources\runners\testng.xml</span>
+                    <span>D:\CIAutomation2019\swabLabs\src\test\resources\runners\regression.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -249,7 +249,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\CIAutomation2019\swabLabs\src\test\resources\runners\testng.xml</span>
+            <span class="header-content">D:\CIAutomation2019\swabLabs\src\test\resources\runners\regression.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -312,27 +312,27 @@ data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'signUp')
 data.setCell(0, 2, 'testCases.TC002_SignUp')
-data.setCell(0, 3, 47084);
+data.setCell(0, 3, 45629);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'accountLogin')
 data.setCell(1, 2, 'testCases.TC01_AccountLogin')
-data.setCell(1, 3, 24293);
+data.setCell(1, 3, 24212);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'logOut')
 data.setCell(2, 2, 'testCases.TC04_logOut')
-data.setCell(2, 3, 4719);
+data.setCell(2, 3, 4461);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'initialSignIn')
 data.setCell(3, 2, 'testCases.TC001_initialSignIn')
-data.setCell(3, 3, 4045);
+data.setCell(3, 3, 4170);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'resources')
 data.setCell(4, 2, 'testCases.TC02_Resources')
-data.setCell(4, 3, 2076);
+data.setCell(4, 3, 2017);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'addToCart')
 data.setCell(5, 2, 'testCases.TC03_addToCart')
-data.setCell(5, 3, 1214);
+data.setCell(5, 3, 1278);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -415,22 +415,22 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">initialSignIn(standard_user, secret_sauce)</span>
-                <span class="method-start">2907 ms</span>
+                <span class="method-start">5368 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">6955 ms</span>
+                <span class="method-start">9543 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC03_addToCart</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">6958 ms</span>
+                <span class="method-start">9545 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">8174 ms</span>
+                <span class="method-start">10826 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
@@ -439,59 +439,59 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">signUp</span>
-                <span class="method-start">8321 ms</span>
+                <span class="method-start">10954 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">55880 ms</span>
+                <span class="method-start">57338 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC02_Resources</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">navigateToUrl</span>
-                <span class="method-start">55956 ms</span>
+                <span class="method-start">57568 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">resources</span>
-                <span class="method-start">59261 ms</span>
+                <span class="method-start">60557 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">61337 ms</span>
+                <span class="method-start">62576 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC01_AccountLogin</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">navigateToWindow</span>
-                <span class="method-start">61405 ms</span>
+                <span class="method-start">62649 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">accountLogin</span>
-                <span class="method-start">61522 ms</span>
+                <span class="method-start">62789 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">85818 ms</span>
+                <span class="method-start">87003 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC04_logOut</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">logOut</span>
-                <span class="method-start">85874 ms</span>
+                <span class="method-start">87032 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">flushData</span>
-                <span class="method-start">90594 ms</span>
+                <span class="method-start">91494 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testCases.TC001_initialSignIn</div> <!-- chronological-class-name -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">90695 ms</span>
+                <span class="method-start">91586 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
