--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6aaa8d">  <td>22/05/04 09:53:54</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:testCases.TC001_initialSignIn@12f41634]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>22/05/04 09:54:00</td>   <td>5353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_initialSignIn.initialSignIn(java.lang.String, java.lang.String)[pri:0, instance:testCases.TC001_initialSignIn@12f41634]">initialSignIn</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="7090a6">  <td>22/05/04 09:54:04</td>   <td>9534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_initialSignIn.flushData()[pri:0, instance:testCases.TC001_initialSignIn@12f41634]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>22/05/04 09:54:04</td>   <td>9536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03_addToCart.addToCart()[pri:0, instance:testCases.TC03_addToCart@13c27452]">addToCart</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="7c65a2">  <td>22/05/04 09:54:05</td>   <td>10817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC03_addToCart.flushData()[pri:0, instance:testCases.TC03_addToCart@13c27452]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/05/04 09:54:05</td>   <td>10945</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC002_SignUp.signUp()[pri:0, instance:testCases.TC002_SignUp@262b2c86]">signUp</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="6f6598">  <td>22/05/04 09:54:52</td>   <td>57330</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC002_SignUp.flushData()[pri:0, instance:testCases.TC002_SignUp@262b2c86]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="ae7a6f">  <td>22/05/04 09:54:52</td>   <td>57559</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC02_Resources.navigateToUrl()[pri:0, instance:testCases.TC02_Resources@371a67ec]">&gt;&gt;navigateToUrl</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="ae7a6f">  <td>22/05/04 09:54:55</td>   <td>60548</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02_Resources.resources()[pri:0, instance:testCases.TC02_Resources@371a67ec]">resources</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="ae7a6f">  <td>22/05/04 09:54:57</td>   <td>62567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC02_Resources.flushData()[pri:0, instance:testCases.TC02_Resources@371a67ec]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/05/04 09:54:57</td>   <td>62640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC01_AccountLogin.navigateToWindow()[pri:0, instance:testCases.TC01_AccountLogin@5ed828d]">&gt;&gt;navigateToWindow</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/05/04 09:54:57</td>   <td>62780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01_AccountLogin.accountLogin()[pri:0, instance:testCases.TC01_AccountLogin@5ed828d]">accountLogin</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>22/05/04 09:55:21</td>   <td>86994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC01_AccountLogin.flushData()[pri:0, instance:testCases.TC01_AccountLogin@5ed828d]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="89cf83">  <td>22/05/04 09:55:22</td>   <td>87023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC04_logOut.logOut()[pri:0, instance:testCases.TC04_logOut@50d0686]">logOut</td> 
-  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="89cf83">  <td>22/05/04 09:55:26</td>   <td>91485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC04_logOut.flushData()[pri:0, instance:testCases.TC04_logOut@50d0686]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
-<tr bgcolor="6aaa8d">  <td>22/05/04 09:55:26</td>   <td>91577</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_initialSignIn@12f41634]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@770189387</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>22/05/04 13:29:18</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:23</td>   <td>5182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:23</td>   <td>5300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
+  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:29</td>   <td>10911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:29</td>   <td>11000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
+  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:34</td>   <td>16385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:29:34</td>   <td>16454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
+  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>22/05/04 13:29:40</td>   <td>22159</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
 </table>
