--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,17 +102,17 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="dataDrivenTestCases.LoginSwag" hash-for-method="login(problem_user, secret_sauce)">login(problem_user, secret_sauce)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="dataDrivenTestCases.LoginSwag" hash-for-method="login(standard_user, secret_sauce)">login(standard_user, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="dataDrivenTestCases.LoginSwag" hash-for-method="login(locked_out_user, secret_sauce)">login(locked_out_user, secret_sauce)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="dataDrivenTestCases.LoginSwag" hash-for-method="login(problem_user, secret_sauce)">login(problem_user, secret_sauce)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -135,14 +135,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login(problem_user, secret_sauce)">
-                  </a> <!-- login(problem_user, secret_sauce) -->
-                  <span class="method-name">login</span>
-                  <span class="parameters">(problem_user, secret_sauce)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="login(standard_user, secret_sauce)">
                   </a> <!-- login(standard_user, secret_sauce) -->
                   <span class="method-name">login</span>
@@ -155,6 +147,14 @@
                   </a> <!-- login(locked_out_user, secret_sauce) -->
                   <span class="method-name">login</span>
                   <span class="parameters">(locked_out_user, secret_sauce)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login(problem_user, secret_sauce)">
+                  </a> <!-- login(problem_user, secret_sauce) -->
+                  <span class="method-name">login</span>
+                  <span class="parameters">(problem_user, secret_sauce)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -218,20 +218,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login')
 data.setCell(0, 2, 'dataDrivenTestCases.LoginSwag')
-data.setCell(0, 3, 5605);
+data.setCell(0, 3, 6309);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'login')
 data.setCell(1, 2, 'dataDrivenTestCases.LoginSwag')
-data.setCell(1, 3, 5447);
+data.setCell(1, 3, 5662);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'login')
 data.setCell(2, 2, 'dataDrivenTestCases.LoginSwag')
-data.setCell(2, 3, 5379);
+data.setCell(2, 3, 5490);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -264,31 +264,43 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">launchbrowser</span>
-                <span class="method-start">5192 ms</span>
+                <span class="method-start">4601 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">login(standard_user, secret_sauce)</span>
-                <span class="method-start">5311 ms</span>
+                <span class="method-start">4736 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">flushData</span>
+                <span class="method-start">11047 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchbrowser</span>
-                <span class="method-start">10922 ms</span>
+                <span class="method-start">11047 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">login(locked_out_user, secret_sauce)</span>
-                <span class="method-start">11011 ms</span>
+                <span class="method-start">11155 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">flushData</span>
+                <span class="method-start">16648 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchbrowser</span>
-                <span class="method-start">16395 ms</span>
+                <span class="method-start">16649 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">login(problem_user, secret_sauce)</span>
-                <span class="method-start">16465 ms</span>
+                <span class="method-start">16731 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">flushData</span>
+                <span class="method-start">22395 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22170 ms</span>
+                <span class="method-start">22621 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
