--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93cca4">  <td>22/05/04 13:29:18</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:23</td>   <td>5182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:23</td>   <td>5300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:29</td>   <td>10911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:29</td>   <td>11000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:34</td>   <td>16385</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:29:34</td>   <td>16454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">login</td> 
-  <td>main@1413246829</td>   <td></td> </tr>
-<tr bgcolor="93cca4">  <td>22/05/04 13:29:40</td>   <td>22159</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:dataDrivenTestCases.LoginSwag@12cdcf4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1413246829</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>22/05/04 13:32:21</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:25</td>   <td>4596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:26</td>   <td>4731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
+  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
+  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
+  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="af6be2">  <td>22/05/04 13:32:43</td>   <td>22391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="93cca4">  <td>22/05/04 13:32:43</td>   <td>22616</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
 </table>
