--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">19,456</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">42,233</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">dataDrivenTestCases.LoginSwag</td><td><a href="#m0">login</a></td><td rowspan="3">1651685546111</td><td rowspan="3">6309</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td></tr><tr class="passedeven"><td><a href="#m2">login</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.TC001_initialSignIn</td><td><a href="#m0">initialSignIn</a></td><td rowspan="1">1652362036942</td><td rowspan="1">4245</td></tr><tr class="passedodd"><td rowspan="1">testCases.TC01_AccountLogin</td><td><a href="#m1">accountLogin</a></td><td rowspan="1">1652362048706</td><td rowspan="1">25446</td></tr><tr class="passedeven"><td rowspan="1">testCases.TC02_Resources</td><td><a href="#m2">resources</a></td><td rowspan="1">1652362045921</td><td rowspan="1">2634</td></tr><tr class="passedodd"><td rowspan="1">testCases.TC03_addToCart</td><td><a href="#m3">addToCart</a></td><td rowspan="1">1652362041192</td><td rowspan="1">1385</td></tr><tr class="passedeven"><td rowspan="1">testCases.TC04_logOut</td><td><a href="#m4">logOut</a></td><td rowspan="1">1652362074266</td><td rowspan="1">4757</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">dataDrivenTestCases.LoginSwag#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>standard_user</td><td>secret_sauce</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">dataDrivenTestCases.LoginSwag#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>locked_out_user</td><td>secret_sauce</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">dataDrivenTestCases.LoginSwag#login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>problem_user</td><td>secret_sauce</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testCases.TC001_initialSignIn#initialSignIn</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>standard_user</td><td>secret_sauce</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.TC01_AccountLogin#accountLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.TC02_Resources#resources</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.TC03_addToCart#addToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testCases.TC04_logOut#logOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
