--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>base.BaseClass.tearDown</td></tr>
+<tr><td>base.BaseClass.tearDown</td></tr>
+<tr><td>base.BaseClass.tearDown</td></tr>
+<tr><td>base.BaseClass.tearDown</td></tr>
+<tr><td>base.BaseClass.init</td></tr>
+<tr><td>base.BaseClass.init</td></tr>
+<tr><td>base.BaseClass.init</td></tr>
+<tr><td>base.BaseClass.init</td></tr>
 </table>
