--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,26 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93cca4">  <td>22/05/04 13:32:21</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:25</td>   <td>4596</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:26</td>   <td>4731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
-  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:32</td>   <td>11150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
-  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSwag.launchbrowser()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&gt;&gt;launchbrowser</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:38</td>   <td>16726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSwag.login(java.lang.String, java.lang.String)[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">login</td> 
-  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="af6be2">  <td>22/05/04 13:32:43</td>   <td>22391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSwag.flushData()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;flushData</td> 
-<td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
-<tr bgcolor="93cca4">  <td>22/05/04 13:32:43</td>   <td>22616</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:dataDrivenTestCases.LoginSwag@5bcea91b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@334203599</td>   <td></td> </tr>
+<tr bgcolor="9ebddf">  <td>22/05/12 09:27:12</td>   <td>0</td> <td title="&gt;&gt;BaseClass.init()[pri:0, instance:testCases.TC001_initialSignIn@46daef40]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7090a6">  <td>22/05/12 09:27:16</td>   <td>4859</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC001_initialSignIn.initialSignIn(java.lang.String, java.lang.String)[pri:0, instance:testCases.TC001_initialSignIn@46daef40]">initialSignIn</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7090a6">  <td>22/05/12 09:27:21</td>   <td>9107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC001_initialSignIn.flushData()[pri:0, instance:testCases.TC001_initialSignIn@46daef40]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>22/05/12 09:27:21</td>   <td>9109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03_addToCart.addToCart()[pri:0, instance:testCases.TC03_addToCart@12f41634]">addToCart</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7c65a2">  <td>22/05/12 09:27:22</td>   <td>10498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC03_addToCart.flushData()[pri:0, instance:testCases.TC03_addToCart@12f41634]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>22/05/12 09:27:22</td>   <td>10611</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC02_Resources.navigateToUrl()[pri:0, instance:testCases.TC02_Resources@13c27452]">&gt;&gt;navigateToUrl</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>22/05/12 09:27:25</td>   <td>13838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02_Resources.resources()[pri:0, instance:testCases.TC02_Resources@13c27452]">resources</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>22/05/12 09:27:28</td>   <td>16474</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC02_Resources.flushData()[pri:0, instance:testCases.TC02_Resources@13c27452]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>22/05/12 09:27:28</td>   <td>16545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC01_AccountLogin.navigateToWindow()[pri:0, instance:testCases.TC01_AccountLogin@262b2c86]">&gt;&gt;navigateToWindow</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>22/05/12 09:27:28</td>   <td>16623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01_AccountLogin.accountLogin()[pri:0, instance:testCases.TC01_AccountLogin@262b2c86]">accountLogin</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="ae7a6f">  <td>22/05/12 09:27:54</td>   <td>42071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC01_AccountLogin.flushData()[pri:0, instance:testCases.TC01_AccountLogin@262b2c86]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="a5f880">  <td>22/05/12 09:27:54</td>   <td>42183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC04_logOut.logOut()[pri:0, instance:testCases.TC04_logOut@371a67ec]">logOut</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="a5f880">  <td>22/05/12 09:27:59</td>   <td>46942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC04_logOut.flushData()[pri:0, instance:testCases.TC04_logOut@371a67ec]">&lt;&lt;flushData</td> 
+<td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="9ebddf">  <td>22/05/12 09:27:59</td>   <td>47182</td> <td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC001_initialSignIn@46daef40]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
 </table>
